--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> Assignment 2 </title>
 
-	<link rel="stylesheet" type="text/css" href="asg2-coursera.css">
+	<link type="text/css" href="asg2-coursera.css">
 </head>
 
 
