--- a/index1.html
+++ b/index1.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title> Assignment 2 </title>
-
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="as2-coursera.css">
 </head>
 
 
@@ -24,7 +25,7 @@
 
 
 		<p id="para1">
-			It is especially important to submit this assignment before the deadline, Apr 19, 11:59 PM PDT, because it must be graded by others. If you submit late, there may not be enough classmates around to review your work. This makes it difficult - and in some cases, impossible - to produce a grade. Submit on time to avoid these risks.
+			Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
 			
 		</p>
 
@@ -41,7 +42,7 @@
 
 
 		<p id="para2">
-			It is especially important to submit this assignment before the deadline, Apr 19, 11:59 PM PDT, because it must be graded by others. If you submit late, there may not be enough classmates around to review your work. This makes it difficult - and in some cases, impossible - to produce a grade. Submit on time to avoid these risks.			
+			Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times.Beef is a source of high-quality protein and nutrients.Most beef skeletal muscle meat can be used as is by merely cutting into certain parts, such as roasts, short ribs or steak.			
 		</p>
 
 	</div>
@@ -55,7 +56,7 @@
 
 
 		<p id="para3">
-			It is especially important to submit this assignment before the deadline, Apr 19, 11:59 PM PDT, because it must be graded by others. If you submit late, there may not be enough classmates around to review your work. This makes it difficult - and in some cases, impossible - to produce a grade. Submit on time to avoid these risks.
+			Sushi is vinegared rice topped with other ingredients. Sashimi, which is slices of raw fish alone, is not sushi because it isn't accompanied with rice. ... The word “sushi” means “it's sour,” which reflects back to sushi's origins of being preserved in salt.
 			
 		</p>
 
