--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@
 
 
 		<p id="para1">
-			Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
+			Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs.
 			
 		</p>
 
@@ -42,7 +42,7 @@
 
 
 		<p id="para2">
-			Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times.Beef is a source of high-quality protein and nutrients.Most beef skeletal muscle meat can be used as is by merely cutting into certain parts, such as roasts, short ribs or steak.			
+			Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times.Beef is a source of high-quality protein and nutrients.Most beef skeletal muscle meat can be used as is by merely cutting into certain parts.			
 		</p>
 
 	</div>
