--- a/index1.html
+++ b/index1.html
@@ -47,7 +47,7 @@
 
 	</div>
 
-	<div class="div_def  col-lg-4 col-md-6 col-sm-12">
+	<div class="div3 div_def col-lg-4 col-md-6 col-sm-12">
 
 
 		<p id="title3">
